# django-official-tutorial

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  renovate.json5  ruff.toml
.github/: dependabot.yml
.github/workflows/: git-hooks.yml  pre-commit.yml  prek.yml  tests.yml
src/core/: settings.py  urls.py
src/core/management/commands/: wait_for_db.py
src/polls/: admin.py  models.py  tests.py  urls.py  views.py
