[project]
name = "django-official-tutorial"
version = "2024.11.23"
description = "The famous polls app from the official Django tutorial, with some additional tooling."
readme = "README.md"
authors = [
    { name = "Ülgen Sarıkavak", email = "ulgensrkvk@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django==5.2.7",
    "django-debug-toolbar==6.1.0",
]

[dependency-groups]
dev = [
    # Used by Django's find_formatters and run_formatters (with a monkey patch)
    "ruff==0.14.3",
]

[tool.uv]
package = false
# The earliest version that supports the current lock file revision
required-version = ">=0.8.4"
