[project]
name = "django-official-tutorial"
version = "2024.11.23"
description = "The famous polls app from the official Django tutorial, with some additional tooling."
readme = "README.md"
authors = [
    { name = "Ülgen Sarıkavak", email = "ulgensrkvk@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django==6.0.2",
    "django-debug-toolbar==6.2.0",
]

[dependency-groups]
dev = [
    # Used by Django's find_formatters and run_formatters (with a monkey patch)
    "ruff==0.15.4",
]

[tool.uv]
# The earliest version that supports the current lock file revision
required-version = ">=0.8.4"
package = false

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"
